--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -10,22 +10,15 @@
   },
   "profiles": {
     "ShowsAPI": {
+      "applicationUrl": "https://localhost:7273;http://localhost:5069",
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7273;http://localhost:5069",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "launchBrowser": false,
+      "launchUrl": "swagger"
     }
+    
   }
 }
