feat: now we will do a specific treatment focused on the artists, we will be able to search only for them and we will have the list of shows they have played or will play yet. new validations for api controller from the data we will receive by parameter

--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -16,7 +16,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "launchBrowser": false,
+      "launchBrowser": true,
       "launchUrl": "swagger"
     }
     
